syntax = "proto3";

package account;

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";

option go_package = "github.com/zuyatna/emoney-microservice/server/pb";

message Account {
  string id = 1;
  string name = 2;
  string email = 3;
  double balance = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}

message CreateAccountRequest {
  string name = 1;
  string email = 2;
  string password = 3;
}

message CreateAccountResponse {
  string id = 1;
  string message = 2;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string access_token = 1;
}

message GetAccountRequest {
  string account_id = 1;
}

service AccountService {
  rpc CreateAccount(CreateAccountRequest) returns (CreateAccountResponse) {
    option (google.api.http) = {
      post: "/v1/accounts"
      body: "*"
    };
  }

  rpc Login(LoginRequest) returns (LoginResponse) {
    option (google.api.http) = {
      post: "/v1/auth/login"
      body: "*"
    };
  }

  rpc GetAccount(GetAccountRequest) returns (Account) {
    option (google.api.http) = {
      get: "/v1/accounts/{account_id}"
    };
  }
}